JDK-8340010